--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   ],
   "name": "moc",
   "description": "mockservice public version",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "main": "src/index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/linkwisdom/mockservice.git"
+    "url": "git://github.com/linkwisdom/moc.git"
   },
   "keywords": [
     "mock",
